fix spacing

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,16 +1,3 @@
-/* html,
-body {
-	margin: 0;
-	padding: 0;
-}
-.background {
-	position: absolute;
-	display: block;
-	top: 0;
-	left: 0;
-	z-index: -1;
-} */
-
 body {
 	font-family: Arial, sans-serif;
 	background-color: #2b2d42;
@@ -59,13 +46,12 @@ header a {
 }
 
 .about {
-	display: flex;
-	flex-direction: column;
+	width: 75%;
+	margin: 2rem auto 0 auto;
 }
 
 .subheader {
 	text-align: left;
-	align-self: center;
 }
 
 .subheader h2 {
@@ -76,23 +62,22 @@ header a {
 
 .words {
 	font-style: italic;
-	margin: 1rem 0;
+	margin-top: 0.2rem;
+	margin-bottom: 1.2rem;
 	color: #8d99ae;
 	font-weight: 300;
-	/* font-size: 1rem; */
 }
 
 .bio {
-	align-self: center;
-	justify-content: flex-start;
+	display: flex;
 }
 
+.text {
+	padding-left: 1.2rem;
+	color: #edf2f4;
+}
+/* TODO: fix aspect ratio bug */
 .bio img {
 	width: 200px;
-	border-radius: 2px;
-	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+	border-radius: 5px;
 }
-
-/* .about p {
-	font-weight: 300;
-} */
